--- a/docs/planned-changes/v4.md
+++ b/docs/planned-changes/v4.md
@@ -1,3 +1,7 @@
+---
+title: Version 4
+---
+
 # Planned Changes for CI Workflows v4.0
 
 Currently, there are no planned changes for CI Workflows v4.0.
